--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -53,7 +53,7 @@
 
 // Article header
 .article-header {
-  margin-bottom: 32px;
+  margin-bottom: 12px;
 
   .article-hero-image {
     width: 100%;
@@ -126,7 +126,7 @@
     display: flex;
     align-items: center;
     gap: 16px;
-    margin-bottom: 16px;
+    // margin-bottom: 16px;
     flex-wrap: wrap;
 
     .publish-date {
@@ -602,7 +602,7 @@
   }
 
   .article-meta {
-    margin-bottom: 12pt !important;
+    // margin-bottom: 12pt !important;
     font-size: 10pt !important;
   }
 
@@ -645,6 +645,7 @@
     display: none !important;
   }
 }
+
 // JSON content styles
 .json-content {
   font-family: 'Courier New', Courier, monospace;
