feat: Enhance styling and structure of error and info cards in login dialog

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -263,7 +263,7 @@
     </div>
 
     @if (extensionError()) {
-    <mat-card class="extension-error" appearance="outlined">
+    <mat-card class="extension-error">
       <mat-card-content>
         <div class="error-header">
           <mat-icon color="warn">extension_off</mat-icon>
@@ -307,7 +307,7 @@
       </button>
     </div>
 
-    <mat-card class="nsec-warning" appearance="outlined">
+    <mat-card class="nsec-warning">
       <mat-card-content>
         <div class="warning-header">
           <mat-icon color="warn">warning</mat-icon>
@@ -354,7 +354,7 @@
       </button>
     </div>
 
-    <mat-card class="nostr-connect-info" appearance="outlined">
+    <mat-card class="nostr-connect-info">
       <mat-card-content>
         <div class="info-header">
           <mat-icon color="primary">info</mat-icon>
@@ -395,7 +395,7 @@
       <mat-hint>You will be able to view content but not interact</mat-hint>
     </mat-form-field>
 
-    <mat-card class="preview-info" appearance="outlined">
+    <mat-card class="preview-info">
       <mat-card-content>
         <div class="info-header">
           <mat-icon color="accent">visibility</mat-icon>
