--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -73,6 +73,9 @@
                 <button mat-icon-button matTooltip="Download credentials as JSON file" (click)="downloadCredentials()">
                   <mat-icon>download</mat-icon>
                 </button>
+                <button mat-icon-button matTooltip="Export account to another device" (click)="exportQrCode()">
+                  <mat-icon>qr_code</mat-icon>
+                </button>
               </div>
             </div>
             <div class="warning-message">
